<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#21A0D2"
    android:gravity="center"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/prev_btn"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="#21A0D2"
        android:contentDescription="@string/desc"
        android:src="@drawable/arrow_white_left_pf" />

    <HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#333333"
        android:fadingEdgeLength="5dp"
        android:scrollbarFadeDuration="0"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#21A0D2"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/top_navigation_selector"
                android:text="@string/powertrain"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_global_small"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/top_navigation_selector"
                android:text="@string/interior"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_global_small"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/top_navigation_selector"
                android:text="@string/exterior"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_global_small"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/top_navigation_selector"
                android:text="@string/autoee"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_global_small"
                android:textStyle="bold" />
        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="#21A0D2"
        android:contentDescription="@string/desc"
        android:src="@drawable/arrow_white_right_pf" />

</LinearLayout>