<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#21a1d2"
        android:gravity="center" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_global"
            android:textSize="@dimen/textsize_global_title"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#9c9c9c"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/leftarrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc"
            android:src="@drawable/arrow_black_left" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_global"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_global_big" />

        <ImageView
            android:id="@+id/rightarrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc"
            android:src="@drawable/arrow_black_right" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical" >

                <com.basf.catalog.component.OnFlingGallery
                    android:id="@+id/gallery"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="#FFFFFF"
                    android:spacing="@dimen/spacing_global" />

                <LinearLayout
                    android:id="@+id/fig_linear_indicator"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/app"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@layout/detail_troubleshooter_navigation_selector"
                    android:text="@string/appearance"
                    android:textSize="@dimen/textsize_global_small"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cause"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@layout/detail_troubleshooter_navigation_selector"
                    android:text="@string/cause"
                    android:textSize="@dimen/textsize_global_small"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@layout/detail_troubleshooter_navigation_selector"
                    android:text="@string/correction"
                    android:textSize="@dimen/textsize_global_small"
                    android:textStyle="bold" />
            </LinearLayout>

            <WebView
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/bottom_navigation_bar" />

</LinearLayout>